
** Bug Fixes

  'find -name /' no longer outputs a warning, because that is a valid pattern
  to match the root directory "/".  Previously, a diagnostic falsely claimed
  that this pattern would not match anything. [#62227]

** Changes to the build process

  findutils now builds again on systems with musl-libc.
  This requires gettext-0.19.8.


* Noteworthy changes in release 4.9.0 (2022-02-22) [stable]

** New features in find

  find now supports the -files0-from option to be able to safely pass an
  arbitrary number of starting points to the tool.  The option requires a file
  name as argument, or "-" to read from standard input.  The entries in that
  file have to be separated by NUL characters. [#60383]

** Changes in locate / updatedb

  updatedb now skips (fuse-mounted) s3fs filesystems by default,
  i.e., unless PRUNEFS is set.

** Bug Fixes

  'find -D stat -L ...' no longer determines SELinux security information as
  if the -L option was not given.
  [Bug present since the SELinux implementation in 4.5.6]

  'find -inum' and 'find -printf %i' now also work on platforms which allow
  the inode number Zero; e.g. the GNU/Hurd uses inode number 0 for /dev/console.
  Previously, find(1) would abort when visiting such a file.
  [Bug present since FINDUTILS_4_5_4-1.]

  findutils-4.8.0 failed to build on some MacOS versions.
  Fixed by a gnulib update. [#59972, #59991]

** Documentation Changes

  The find.1 man page and the Texinfo manual now show environment variables
  in a consistent style. [#59963]

  Furthermore, both add the description of the -printf format directive '%B',
  for a file's birth time, and its limitations. [#61327]

  The description of the -delete action has been improved and aligned among
  the manual page and the Texinfo documentation. [#61774]

  Various other documentation fixes - syntax issues and typos.
  [#61303, #60823, #61341]

  The output of 'find --help' now reads better.
