@@ -9,8 +9,6 @@
 /find.fns
 /find.html/
 /find.info
-/find.info-1
-/find.info-2
 /find.ky
 /find.log
 /find.pdf
