@@ -13,6 +13,11 @@ GNU findutils NEWS - User visible changes.      -*- outline -*- (allout)
   findutils now builds again on systems with musl-libc.
   This requires gettext-0.19.8.
 
+** Documentation Changes
+
+  When generating the Texinfo manual, `makeinfo` is invoked with the --no-split
+  option for all output formats now; this avoids files like find.info-[12].
+
 
 * Noteworthy changes in release 4.9.0 (2022-02-22) [stable]
 
